--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -1,14 +1,12 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:gravity="center_horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/drawerLayout"
     tools:context="com.c50x.eleos.activities.CreateTeamActivity">
 
     <android.support.design.widget.TextInputLayout
@@ -18,9 +16,10 @@
         <EditText
             android:id="@+id/team_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:hint="Team Name"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:layout_margin="20dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -57,10 +56,11 @@
         <EditText
             android:id="@+id/player1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:hint="Player Names"
             android:singleLine="true"
-            android:inputType="textMultiLine"/>
+            android:layout_margin="20dp"
+            android:layout_weight="1"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -132,7 +132,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/button_confirm"
@@ -140,7 +140,9 @@
             android:layout_height="wrap_content"
             android:background="@color/colorButtons"
             android:layout_weight="1"
-            android:text="Confirm" />
+            android:layout_gravity="bottom"
+            android:text="Confirm"
+            android:backgroundTint="@color/colorPrimaryDark"/>
 
         <Button
             android:id="@+id/button_cancel"
@@ -148,8 +150,20 @@
             android:layout_height="wrap_content"
             android:background="@color/colorButtons"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:layout_gravity="bottom"
+            android:text="Cancel"
+            android:backgroundTint="@color/colorPrimaryDark"/>
 
     </LinearLayout>
 
-</LinearLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:fitsSystemWindows="true"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu"
+        android:layout_gravity="start" >
+
+    </android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
