--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -9,23 +9,17 @@
     android:id="@+id/drawerLayout"
     tools:context="com.c50x.eleos.activities.CreateTeamActivity">
 
-    <android.support.design.widget.TextInputLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="87dp">
+        android:layout_height="87dp"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/team_name"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:hint="Team Name"
-            android:singleLine="true"
-            android:layout_margin="20dp" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="87dp">
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/team_sport"
@@ -34,11 +28,6 @@
             android:hint="Team Sport"
             android:singleLine="true" />
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="87dp">
 
         <EditText
             android:id="@+id/team_admin"
@@ -47,87 +36,15 @@
             android:hint="Team Admin"
             android:singleLine="true" />
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
         <EditText
-            android:id="@+id/player1"
+            android:id="@+id/players"
+            android:inputType="textMultiLine"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:hint="Player Names"
-            android:singleLine="true"
-            android:layout_margin="20dp"
-            android:layout_weight="1"/>
-
-    </android.support.design.widget.TextInputLayout>
-
-    <!-- <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
-        <EditText
-            android:id="@+id/player2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Player 2 Name"
             android:singleLine="true" />
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
-        <EditText
-            android:id="@+id/player3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Player 3 Name"
-            android:singleLine="true" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
-        <EditText
-            android:id="@+id/player4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Player 4 Name"
-            android:singleLine="true" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
-        <EditText
-            android:id="@+id/player5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Player 5 Name"
-            android:singleLine="true" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
-        <EditText
-            android:id="@+id/player6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Player 6 Name"
-            android:singleLine="true" />
-
-    </android.support.design.widget.TextInputLayout> -->
+    </LinearLayout>
 
 
     <LinearLayout
