--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_menu_teamCreation"
             android:icon="@drawable/ic_media_play_light"
@@ -8,5 +9,9 @@
         <item
             android:id="@+id/nav_menu_gameCreation"
             android:title="Game Creation" />
+        <item
+            android:id="@+id/nav_menu_playerSearch"
+            android:title="Player Search" />
+
     </group>
 </menu>
