--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -1,87 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:id="@+id/drawerLayout"
-    tools:context="com.c50x.eleos.activities.CreateTeamActivity">
+    android:addStatesFromChildren="true"
+    android:background="@color/colorPrimary">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="87dp"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/team_name"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Team Name"
-            android:singleLine="true" />
-
-        <EditText
-            android:id="@+id/team_sport"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Team Sport"
-            android:singleLine="true" />
-
-
-        <EditText
-            android:id="@+id/team_admin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Team Admin"
-            android:singleLine="true" />
-
-        <EditText
-            android:id="@+id/players"
-            android:inputType="textMultiLine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Player Names"
-            android:singleLine="false" />
-
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/button_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorButtons"
-            android:layout_weight="1"
-            android:layout_gravity="bottom"
-            android:text="Confirm"
-            android:backgroundTint="@color/colorPrimaryDark"/>
-
-        <Button
-            android:id="@+id/button_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorButtons"
-            android:layout_weight="1"
-            android:layout_gravity="bottom"
-            android:text="Cancel"
-            android:backgroundTint="@color/colorPrimaryDark"/>
-
-    </LinearLayout>
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:fitsSystemWindows="true"
+    <TextView
+        android:id="@+id/team_name_txt"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:menu="@menu/navigation_menu"
-        android:layout_gravity="start" >
+        android:layout_height="wrap_content"
+        android:text="Team name: "
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        />
 
-    </android.support.design.widget.NavigationView>
+    <EditText
+        android:id="@+id/team_name_input"
+        android:layout_width="201dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="team name" />
 
-</android.support.v4.widget.DrawerLayout>
+    <TextView
+        android:id="@+id/team_sport_txt"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Team sport :"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/team_sport_input"
+        android:layout_width="201dp"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="team sport" />
+
+    <TextView
+        android:id="@+id/game_players_txt"
+        android:layout_column="0"
+        android:layout_row="2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Players: "
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/game_players_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="player search"
+        android:textSize="18sp"
+        android:layout_row="2"
+        android:layout_column="1"
+        android:layout_margin="10dp"/>
+
+
+
+    <Button
+        android:id="@+id/cancel_create_team_button"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_column="1"
+        android:layout_marginBottom="200dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_row="7"
+        android:text="Cancel" />
+
+    <Button
+        android:id="@+id/confirm_create_team_button"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_column="0"
+        android:layout_row="7"
+        android:text="Confirm" />
+
+</GridLayout>
+
