--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -1,148 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:addStatesFromChildren="true"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
+    >
+
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        >
+
+        <EditText
+            android:id="@+id/et_game_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Game name"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <Spinner
+        android:id="@+id/spn_game_sport"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="16dp"
+        >
+
+    </Spinner>
+
 
     <TextView
-        android:id="@+id/game_name_txt"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_main_team"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Game name: "
-        android:textColor="@android:color/black"
+        android:text="Pick your team"
         android:textSize="18sp"
+        android:padding="8dp"
+        android:layout_margin="16dp"
         />
 
-    <EditText
-        android:id="@+id/game_name_input"
-        android:layout_width="201dp"
-        android:layout_height="wrap_content"
-        android:hint="game name" />
-
     <TextView
-        android:id="@+id/game_type_txt"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_game_challenged_team"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Game type:"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/game_type_input"
-        android:layout_width="201dp"
-        android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_row="1"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="game type" />
-
-    <TextView
-        android:id="@+id/game_players_txt"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Players: "
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/game_players_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="player search"
+        android:text="Pick a team to challenge"
         android:textSize="18sp"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_margin="10dp"/>
+        android:padding="8dp"
+        android:layout_margin="16dp"
+
+        />
+    <TextView
+        android:id="@+id/tv_game_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pick a date"
+        android:textSize="18sp"
+        android:padding="8dp"
+        android:layout_margin="16dp"
+
+
+
+        />
 
     <TextView
-        android:id="@+id/game_location_txt"
+        android:id="@+id/tv_game_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Location:"
-        android:textColor="@android:color/black"
+        android:text="Pick a time"
         android:textSize="18sp"
-        android:layout_column="0"
-        android:layout_row="3"/>
+        android:padding="8dp"
 
-
-
+        android:layout_margin="16dp"
+        />
     <TextView
-        android:id="@+id/game_date_txt"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_game_location"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Date:"
-        android:textColor="@android:color/black"
+        android:singleLine="true"
+        android:drawableLeft="@drawable/ic_add_location_black_24dp"
+        android:drawablePadding="8dp"
+        android:text="Add venue"
         android:textSize="18sp"
-        android:layout_row="4"
-        android:layout_column="0"
-        android:layout_margin="10dp"/>
+        android:padding="8dp"
+        android:layout_margin="16dp"
+        />
 
-    <TextView
-        android:id="@+id/game_date_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Pick a date"
-        android:textSize="18sp"
-        android:layout_row="4"
-        android:layout_column="1"
-        android:layout_margin="10dp"/>
 
-    <EditText
-        android:id="@+id/location_input"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Location"
-        android:layout_column="1"
-        android:layout_row="3"/>
-
-    <TextView
-        android:id="@+id/game_time_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="time:"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:layout_row="5"
-        android:layout_column="0"
-        android:layout_margin="10dp"/>
+        android:padding="8dp"
+        android:layout_margin="16dp"
+        >
 
     <Button
-        android:id="@+id/game_time_input"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:id="@+id/btn_create_game_cancel"
         android:layout_height="wrap_content"
-        android:hint="Pick a time"
-        android:textSize="18sp"
-        android:layout_row="5"
-        android:layout_column="1"
-        android:layout_margin="10dp"/>
+        android:text="Cancel"
+        android:layout_weight="1"
+        />
 
     <Button
-        android:id="@+id/cancel_create_game_button"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
+        android:id="@+id/btn_create_game_confirm"
         android:layout_height="50dp"
-        android:layout_column="1"
-        android:layout_marginBottom="200dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_row="7"
-        android:text="Cancel" />
+        android:layout_weight="1"
+        android:text="Confirm"
+        />
 
-    <Button
-        android:id="@+id/confirm_create_game_button"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_column="0"
-        android:layout_row="7"
-        android:text="Confirm" />
 
-</GridLayout>
+    </LinearLayout>
 
+
+</LinearLayout>
