--- a/app/src/main/res/menu/menu_actionbar.xml
+++ b/app/src/main/res/menu/menu_actionbar.xml
@@ -3,7 +3,7 @@
 
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item
-        android:id="@+id/action_favorite"
+        android:id="@+id/mnut_done"
         android:title="done"
         app:showAsAction="always"/>
 
