--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -1,45 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:addStatesFromChildren="true"
+    android:orientation="vertical"
     android:background="@color/colorPrimary">
-
-    <TextView
-        android:id="@+id/tv_team_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Team name: "
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        />
 
     <EditText
         android:id="@+id/et_team_name"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:layout_marginStart="80dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:hint="team name" />
-
-    <TextView
-        android:id="@+id/tv_team_sport"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Team sport :"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/et_team_sport"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
-        android:layout_column="1"
+        android:layout_column="0"
         android:layout_row="1"
         android:ems="10"
         android:inputType="textPersonName"
+        android:layout_marginStart="80dp"
+        android:layout_marginBottom="20dp"
         android:hint="team sport" />
 
 
@@ -47,34 +34,40 @@
         android:id="@+id/tv_game_players"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="player search"
+        android:text="Select Players"
+        android:layout_marginStart="80dp"
         android:textSize="18sp"
         android:layout_row="2"
-        android:layout_column="1"
-        android:layout_margin="10dp"/>
-
-
-
-    <Button
-        android:id="@+id/btn_cancel_create_team"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_column="1"
-        android:layout_marginBottom="200dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_row="7"
-        android:text="Cancel" />
-
-    <Button
-        android:id="@+id/btn_confirm_create_team"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
         android:layout_column="0"
-        android:layout_row="7"
-        android:text="Confirm" />
+        />
 
-</GridLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="16dp"
+        >
+
+        <Button
+            android:layout_width="0dp"
+            android:id="@+id/btn_cancel_create_team"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:layout_weight="1"
+            />
+
+        <Button
+            android:layout_width="0dp"
+            android:id="@+id/btn_confirm_create_team"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="Confirm"
+            />
+
+
+    </LinearLayout>
+
+</android.support.v7.widget.LinearLayoutCompat>
 
