--- a/app/src/main/res/layout/activity_player_search.xml
+++ b/app/src/main/res/layout/activity_player_search.xml
@@ -7,12 +7,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <android.support.v7.widget.SearchView
+        android:id="@+id/player_actionbar_search"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        app:titleTextColor="@android:color/white" />
+        android:layout_height="wrap_content">
+
+
+    </android.support.v7.widget.SearchView>
+
 
 
     <android.support.v7.widget.RecyclerView
@@ -24,16 +26,6 @@
         android:background="@color/cardview_dark_background"/>
 
 
-    <Button
-        android:id="@+id/player_search_confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="confirm"
-        android:layout_gravity="bottom"
-        android:layout_weight="1"
-
-
-        />
 
 
 
