--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu"
+        app:headerLayout="@layout/navigation_menu_header"
         android:layout_gravity="start" >
 
     </android.support.design.widget.NavigationView>
